# LLVM-Techniques-Tips-and-Best-Practices-Clang-and-Middle-End-Libraries

./: README.md
Chapter 11/SimpleMulOpt/: CMakeLists.txt  SimpleMulOpt.cpp
Chapter 12/FindRestrict/: CMakeLists.txt  FindRestrict.cpp
Chapter 12/LPCSanitizer/: Base-Clang.diff  Base-CompilerRT.diff  Changes-CompilerRT.diff  README.md
Chapter 2/Out Of Tree Integration/Exec/: CMakeLists.txt  main.cpp
Chapter 4/TableGen Donut/: DonutRecipe.td  Kitchen.td
Chapter 4/TableGen Donut - Backend/utils/TableGen/: RecipePrinter.cpp  TableGen.cpp.diff  TableGenBackends.h.diff
Chapter 6/: CMakeLists.txt  MacroGuardPragma.cpp  MacroGuardValidator.cpp  MacroGuardValidator.h
Chapter 7/TernaryConverter/: TernaryConverter.cpp
Chapter 8/: README.md  SimpleLog.diff
Chapter 9/HaltAnalyzer/: HaltAnalyzer.cpp
Chapter 9/StrictOpt/: StrictOpt.h
Chapter04/: README.md
Chapter04/TableGen Donut/: Ingredients.td
Chapter04/TableGen Donut - Backend/: RecipePrinterBackend.diff
Chapter04/TableGen Donut - Backend/utils/TableGen/: CMakeLists.txt.diff
Chapter07/TernaryConverter/: .gitignore  CMakeLists.txt  TernaryConverter.h
Chapter08/: Zipline.diff
Chapter09/HaltAnalyzer/: .gitignore  CMakeLists.txt
Chapter09/StrictOpt/: CMakeLists.txt  StrictOpt.cpp
Chapter11/SimpleMulOpt/: SimpleMulOpt.cpp
Chapter12/LPCSanitizer/: Changes-Clang.diff  Changes-LLVM.diff
